refactor: PlaylistService 리팩토링